# andrewbot-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
db/wyr/: wyr-hot.ndjson  wyr-new.ndjson  wyr-top-all.ndjson  wyr-top-year.ndjson
migrations/2021-08-26-221752_gotd_schedules/: down.sql  up.sql
src/: main.rs
src/clients/: gotd.rs  mod.rs
src/commands/: game.rs  gotd.rs  gotd_stop.rs  mem.rs  mod.rs  ping.rs  wyr.rs
src/store/: mod.rs  model.rs  mysql_store.rs  schema.rs  storage.rs
