[package]
name = "andrew-bot-rs"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
cron = "0.9.0"
dotenv = "0.15"
reqwest = "0.11.4"
serde = "1.0.127"
serenity = { version = "0.10.9", features = ["unstable_discord_api"] }
sys-info = "0.9.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
diesel = { version = "1.4.7", features = ["mysql", "r2d2", "chrono"] }
